--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "main": "dist/__APP__.bundle.js",
   "license": "MIT",
   "scripts": {
-    "build:dev": "webpack-cli --mode development --config webpack.config.ts",
-    "build:prod": "webpack-cli --mode production --config webpack.config.ts",
+    "build:dev": "cross-env NODE_ENV=development webpack-cli --mode development --config ./scripts/webpack/webpack.config.ts",
+    "build:prod": "cross-env NODE_ENV=production webpack-cli --mode production --config ./scripts/webpack/webpack.config.ts",
     "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "@types/node": "^10.1.1",
+    "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.4.0",
+    "@types/webpack-merge": "^4.1.3",
+    "@types/webpack-node-externals": "^1.6.3",
+    "cross-env": "^5.1.5",
     "jest": "^22.4.3",
     "ts-jest": "^22.4.6",
     "ts-loader": "^4.3.0",
     "ts-node": "^6.0.3",
     "typescript": "^2.8.3",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^2.1.3",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "jest": {
     "transform": {
