--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "lib": [
-      "es2015"
+      "es2015",
+      "es2015.promise"      
     ]
   }
 }
