--- a/package.json
+++ b/package.json
@@ -1,44 +1,49 @@
 {
-  "name": "__APP__",
-  "version": "1.0.0",
-  "main": "dist/__APP__.bundle.js",
-  "license": "MIT",
-  "scripts": {
-    "build:dev": "cross-env NODE_ENV=development webpack-cli --mode development --config ./scripts/webpack/webpack.config.ts",
-    "build:prod": "cross-env NODE_ENV=production webpack-cli --mode production --config ./scripts/webpack/webpack.config.ts",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "@types/node": "^10.1.1",
-    "@types/uglifyjs-webpack-plugin": "^1.1.0",
-    "@types/webpack": "^4.4.0",
-    "@types/webpack-merge": "^4.1.3",
-    "@types/webpack-node-externals": "^1.6.3",
-    "cross-env": "^5.1.5",
-    "jest": "^22.4.3",
-    "ts-jest": "^22.4.6",
-    "ts-loader": "^4.3.0",
-    "ts-node": "^6.0.3",
-    "typescript": "^2.8.3",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-merge": "^4.1.2",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
+    "name": "app",
+    "version": "1.0.0",
+    "main": "dist/app.bundle.js",
+    "license": "MIT",
+    "scripts": {
+        "init": "node ./scripts/init.js",
+        "build:dev": "webpack-cli --config ./scripts/webpack/webpack.development.config.ts",
+        "build:prod": "webpack-cli --config ./scripts/webpack/webpack.production.config.ts",
+        "test": "jest",
+        "lint": "tslint --project . src/**/*.ts"
     },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
-  }
+    "devDependencies": {
+        "@types/jest": "^23.3.7",
+        "@types/node": "^10.12.0",
+        "@types/uglifyjs-webpack-plugin": "^1.1.0",
+        "@types/webpack": "^4.4.17",
+        "@types/webpack-merge": "^4.1.3",
+        "@types/webpack-node-externals": "^1.6.3",
+        "jest": "^23.6.0",
+        "prettier": "^1.14.3",
+        "ts-jest": "^23.10.4",
+        "ts-loader": "^5.2.2",
+        "ts-node": "^7.0.1",
+        "tslint": "^5.11.0",
+        "tslint-config-prettier": "^1.15.0",
+        "tslint-config-standard": "^8.0.1",
+        "typescript": "^3.1.3",
+        "uglifyjs-webpack-plugin": "^2.0.1",
+        "webpack": "^4.23.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-merge": "^4.1.4",
+        "webpack-node-externals": "^1.7.2"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.tsx?$": "ts-jest"
+        },
+        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
+        ]
+    }
 }
