--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "ts-jest": "^23.10.4",
         "ts-loader": "^5.2.2",
         "ts-node": "^7.0.1",
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
         "tslint": "^5.11.0",
         "tslint-config-prettier": "^1.15.0",
         "tslint-config-standard": "^8.0.1",
@@ -45,7 +46,7 @@
             "node"
         ],
         "moduleNameMapper": {
-            "^\\@\\/(.*)": "<rootDir>/src/$1"
+            "@/(.*)": "<rootDir>/src/$1"
         }
     }
 }
