--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "name": "app",
     "version": "1.0.0",
-    "main": "dist/app.bundle.js",
+    "main": "dist/app.js",
     "license": "MIT",
     "scripts": {
-        "build:dev": "webpack-cli --config ./scripts/webpack/webpack.development.config.ts",
-        "build:prod": "webpack-cli --config ./scripts/webpack/webpack.production.config.ts",
+        "build:dev": "webpack-cli --progress --config ./configs/webpack/webpack.development.config.ts",
+        "build:prod": "webpack-cli --progress --config ./configs/webpack/webpack.production.config.ts",
+        "watch": "concurrently \"webpack-cli --hot --watch --progress --config ./configs/webpack/webpack.development.config.ts\" \"npm:start\"",
+        "start": "nodemon",
         "test": "jest",
         "lint": "tslint --project . ./src/**/*.ts"
     },
@@ -16,7 +18,9 @@
         "@types/webpack": "^4.4.17",
         "@types/webpack-merge": "^4.1.3",
         "@types/webpack-node-externals": "^1.6.3",
+        "concurrently": "^4.0.1",
         "jest": "^23.6.0",
+        "nodemon": "^1.18.5",
         "prettier": "^1.14.3",
         "ts-jest": "^23.10.4",
         "ts-loader": "^5.2.2",
