--- a/package.json
+++ b/package.json
@@ -1,37 +1,32 @@
 {
     "name": "app",
     "version": "1.0.0",
-    "main": "dist/app.js",
+    "main": "build/app.js",
     "license": "MIT",
     "scripts": {
-        "build:dev": "webpack-cli --progress --config ./configs/webpack/webpack.development.config.ts",
-        "build:prod": "webpack-cli --progress --config ./configs/webpack/webpack.production.config.ts",
-        "watch": "concurrently \"webpack-cli --hot --watch --progress --config ./configs/webpack/webpack.development.config.ts\" \"npm:start\"",
+        "build:dev": "webpack-cli --progress --config ./configs/webpack/webpack.development.config",
+        "build:prod": "webpack-cli --progress --config ./configs/webpack/webpack.production.config",
+        "watch": "webpack-cli --watch --progress --config ./configs/webpack/webpack.development.config",
         "start": "nodemon",
         "test": "jest",
         "lint": "tslint --project . ./src/**/*.ts"
     },
     "devDependencies": {
-        "@types/jest": "^23.3.7",
-        "@types/node": "^10.12.0",
-        "@types/uglifyjs-webpack-plugin": "^1.1.0",
+        "@types/jest": "^23.3.9",
+        "@types/node": "^10.12.2",
         "@types/webpack": "^4.4.17",
-        "@types/webpack-merge": "^4.1.3",
-        "@types/webpack-node-externals": "^1.6.3",
-        "concurrently": "^4.0.1",
         "jest": "^23.6.0",
-        "nodemon": "^1.18.5",
+        "nodemon-webpack-plugin": "^3.0.1",
         "prettier": "^1.14.3",
         "ts-jest": "^23.10.4",
-        "ts-loader": "^5.2.2",
+        "ts-loader": "^5.3.0",
         "ts-node": "^7.0.1",
         "tsconfig-paths-webpack-plugin": "^3.2.0",
         "tslint": "^5.11.0",
         "tslint-config-prettier": "^1.15.0",
         "tslint-config-standard": "^8.0.1",
-        "typescript": "^3.1.3",
-        "uglifyjs-webpack-plugin": "^2.0.1",
-        "webpack": "^4.23.1",
+        "typescript": "^3.1.6",
+        "webpack": "^4.24.0",
         "webpack-cli": "^3.1.2",
         "webpack-merge": "^4.1.4",
         "webpack-node-externals": "^1.7.2"
