--- a/package.json
+++ b/package.json
@@ -1,51 +1,27 @@
 {
-    "name": "app",
-    "version": "1.0.0",
-    "main": "build/app.js",
-    "license": "MIT",
-    "scripts": {
-        "build:dev": "webpack-cli --progress --config ./configs/webpack/webpack.development.config",
-        "build:prod": "webpack-cli --progress --config ./configs/webpack/webpack.production.config",
-        "watch": "webpack-cli --watch --progress --config ./configs/webpack/webpack.development.config",
-        "start": "nodemon",
-        "test": "jest",
-        "lint": "tslint --project . ./src/**/*.ts"
-    },
-    "devDependencies": {
-        "@types/jest": "^23.3.9",
-        "@types/node": "^10.12.2",
-        "@types/webpack": "^4.4.17",
-        "jest": "^23.6.0",
-        "nodemon-webpack-plugin": "^3.0.1",
-        "prettier": "^1.14.3",
-        "ts-jest": "^23.10.4",
-        "ts-loader": "^5.3.0",
-        "ts-node": "^7.0.1",
-        "tsconfig-paths-webpack-plugin": "^3.2.0",
-        "tslint": "^5.11.0",
-        "tslint-config-prettier": "^1.15.0",
-        "tslint-config-standard": "^8.0.1",
-        "typescript": "^3.1.6",
-        "webpack": "^4.24.0",
-        "webpack-cli": "^3.1.2",
-        "webpack-merge": "^4.1.4",
-        "webpack-node-externals": "^1.7.2"
-    },
-    "jest": {
-        "transform": {
-            "^.+\\.tsx?$": "ts-jest"
-        },
-        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "jsx",
-            "json",
-            "node"
-        ],
-        "moduleNameMapper": {
-            "@/(.*)": "<rootDir>/src/$1"
-        }
-    }
+  "name": "typescript-webpack-template",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production",
+    "test": "jest",
+    "lint": "tslint --fix -p ."
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.13",
+    "@types/node": "^10.12.21",
+    "@types/webpack": "^4.4.24",
+    "@types/webpack-merge": "^4.1.3",
+    "jest": "^24.0.0",
+    "ts-jest": "^23.10.5",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.1",
+    "webpack": "^4.29.1",
+    "webpack-cli": "^3.2.1",
+    "webpack-merge": "^4.2.1"
+  }
 }
