--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
-    "extends": "./configs/typescript/base",
-    "compilerOptions": {
-        "declaration": true,
-        "outDir": "build",
-        "declarationDir": "build",
-        "sourceMap": true
-    },
-    "include": ["src/**/*"]
+  "compilerOptions": {
+    "baseUrl": ".",
+
+    "target": "es6",
+    "module": "commonjs",
+
+    "alwaysStrict": true,
+    "esModuleInterop": true,
+
+    "noUnusedLocals": true
+  }  
 }
