Moved jest config to package json

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "webpack": "^4.29.1",
     "webpack-cli": "^3.2.1",
     "webpack-merge": "^4.2.1"
+  },
+  "jest": {
+	"preset": "ts-jest",
+	"testEnvironment": "node"
   }
 }
