--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-webpack-template",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "build:dev": "webpack --mode=development",
@@ -10,22 +10,25 @@
     "lint": "tslint --fix -p ."
   },
   "devDependencies": {
-    "@types/jest": "^23.3.13",
+    "@types/jest": "^24.0.0",
     "@types/node": "^10.12.21",
     "@types/webpack": "^4.4.24",
     "@types/webpack-merge": "^4.1.3",
-    "jest": "^24.0.0",
+    "jest": "^24.1.0",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "typescript": "^3.3.1",
     "webpack": "^4.29.1",
-    "webpack-cli": "^3.2.1",
+    "webpack-cli": "^3.2.3",
     "webpack-merge": "^4.2.1"
   },
   "jest": {
-	"preset": "ts-jest",
-	"testEnvironment": "node"
+    "preset": "ts-jest",
+	"testEnvironment": "node",
+	"moduleNameMapper": {
+		"@/(.*)": "<rootDir>/src/$1"
+	}
   }
 }
