--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/webpack": "^4.4.24",
     "@types/webpack-merge": "^4.1.3",
     "jest": "^24.1.0",
+    "prettier": "^1.16.4",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.1",
     "webpack": "^4.29.1",
     "webpack-cli": "^3.2.3",
@@ -26,9 +28,9 @@
   },
   "jest": {
     "preset": "ts-jest",
-	"testEnvironment": "node",
-	"moduleNameMapper": {
-		"@/(.*)": "<rootDir>/src/$1"
-	}
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "@/(.*)": "<rootDir>/src/$1"
+    }
   }
 }
