--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,19 @@
+# EditorConfig is awesome: https://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
-indent_style = tab
-indent_size = 4
-charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = lf
 insert_final_newline = true
+
+# Source files
+[*.{js,ts}]
+charset = utf-8
+indent_style = tab
+
+# JSON files
+[{*.json}]
+indent_style = space
+indent_size = 4
