--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-	"name": "typescript-webpack-template",
-	"version": "1.0.0",
-	"main": "dist/index.js",
-	"repository": "git@github.com:addelajnen/typescript-webpack-template.git",
-	"author": "addelajnen <addelajnen@outlook.com>",
-	"license": "MIT",
-	"scripts": {
-		"build:development": "webpack --mode development",
-		"build:production": "webpack --mode production",
-		"lint": "eslint . --ext .ts",
-		"test:unit": "jest"
-	},
-	"devDependencies": {
-		"@types/jest": "^26.0.13",
-		"@types/node": "^14.10.1",
-		"@types/webpack": "^4.41.22",
-		"@typescript-eslint/eslint-plugin": "^4.1.0",
-		"@typescript-eslint/parser": "^4.1.0",
-		"eslint": "^7.9.0",
-		"jest": "^26.4.2",
-		"ts-jest": "^26.3.0",
-		"ts-loader": "^8.0.3",
-		"ts-node": "^9.0.0",
-		"typescript": "^4.0.2",
-		"webpack": "^4.44.1",
-		"webpack-cli": "^3.3.12"
-	}
+  "name": "webpack-typescript-template",
+  "version": "2.0.0",
+  "main": "./dist/index.js",
+  "author": "addelajnen <addelajnen@outlook.com>",
+  "license": "MIT",
+  "scripts": {
+    "build": "webpack",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@tsconfig/node12": "^1.0.7",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.5",
+    "@types/webpack": "^4.41.23",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "jest": "^26.6.1",
+    "ts-jest": "^26.4.3",
+    "ts-loader": "^8.0.7",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5",
+    "webpack": "^5.3.0",
+    "webpack-cli": "^4.1.0"
+  }
 }
